--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
                 <button onclick="informativa()">Información</button>
                 <button onclick="Capturados()">Capturados</button>
                 <button onclick="Favoritos()">Favoritos</button>
-                <button onclick="Combate()">Combate</button>
             </nav>
         </div>
     </header>
@@ -27,7 +26,7 @@
     </main>
 
     <footer class="site-footer">
-        <div class="container">Hecho con ❤️ — Datos: Digimon API</div>
+        <div class="container">Hecho Por Dylan — Datos: Digimon API</div>
     </footer>
 
     <!-- Cargar scripts en orden correcto y sin duplicados -->
